--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -39,8 +39,8 @@
       left: 0;
       top: 180px;
       max-width: 320px;
-      background: linear-gradient(to right, rgb(80, 104, 180), transparent);
-      border-radius: 45px;
+      background: linear-gradient(to right, rgb(110, 134, 200), transparent 70%);
+      border-radius: 75px;
       border-bottom-right-radius: 125px;
       border-top-right-radius: 125px;
     }
