--- a/static/scss/store/about.css
+++ b/static/scss/store/about.css
@@ -5,4 +5,553 @@
 .cover-mobile .cover-text img {
   top: 120px;
 }
+
+.load-wrapp {
+  float: left;
+  width: 100%;
+  height: 100vh;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  background-color: white;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100000;
+  opacity: 1;
+  pointer-events: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all .5s ease-in;
+  transition: all .5s ease-in;
+  /* =Animate the stuff
+  ------------------------ */
+}
+
+.load-wrapp.hidden {
+  opacity: 0;
+}
+
+.load-wrapp .load-wrapp p {
+  padding: 0 0 20px;
+}
+
+.load-wrapp .load-wrapp:last-child {
+  margin-right: 0;
+}
+
+.load-wrapp .line {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  background-color: #3c54a0;
+}
+
+.load-wrapp .ring-1 {
+  width: 10px;
+  height: 10px;
+  margin: 0 auto;
+  padding: 10px;
+  border: 7px dashed #3c54a0;
+  border-radius: 100%;
+}
+
+.load-wrapp .ring-2 {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  margin: 0 auto;
+  border: 4px solid #3c54a0;
+  border-radius: 100%;
+}
+
+.load-wrapp .ball-holder {
+  position: absolute;
+  width: 12px;
+  height: 45px;
+  left: 17px;
+  top: 0px;
+}
+
+.load-wrapp .ball {
+  position: absolute;
+  top: -11px;
+  left: 0;
+  width: 16px;
+  height: 16px;
+  border-radius: 100%;
+  background: #5068b4;
+}
+
+.load-wrapp .letter-holder {
+  padding: 16px;
+}
+
+.load-wrapp .letter {
+  float: left;
+  font-size: 14px;
+  color: #777;
+}
+
+.load-wrapp .square {
+  width: 12px;
+  height: 12px;
+  border-radius: 4px;
+  background-color: #5068b4;
+}
+
+.load-wrapp .spinner {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  margin: 0 auto;
+}
+
+.load-wrapp .bubble-1,
+.load-wrapp .bubble-2 {
+  position: absolute;
+  top: 0;
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+  background-color: #5068b4;
+}
+
+.load-wrapp .bubble-2 {
+  top: auto;
+  bottom: 0;
+}
+
+.load-wrapp .bar {
+  float: left;
+  width: 15px;
+  height: 6px;
+  border-radius: 2px;
+  background-color: #4b9cdb;
+}
+
+.load-wrapp .load-1 .line:nth-last-child(1) {
+  -webkit-animation: loadingA 1.5s 1s infinite;
+          animation: loadingA 1.5s 1s infinite;
+}
+
+.load-wrapp .load-1 .line:nth-last-child(2) {
+  -webkit-animation: loadingA 1.5s 0.5s infinite;
+          animation: loadingA 1.5s 0.5s infinite;
+}
+
+.load-wrapp .load-1 .line:nth-last-child(3) {
+  -webkit-animation: loadingA 1.5s 0s infinite;
+          animation: loadingA 1.5s 0s infinite;
+}
+
+.load-wrapp .load-2 .line:nth-last-child(1) {
+  -webkit-animation: loadingB 1.5s 1s infinite;
+          animation: loadingB 1.5s 1s infinite;
+}
+
+.load-wrapp .load-2 .line:nth-last-child(2) {
+  -webkit-animation: loadingB 1.5s 0.5s infinite;
+          animation: loadingB 1.5s 0.5s infinite;
+}
+
+.load-wrapp .load-2 .line:nth-last-child(3) {
+  -webkit-animation: loadingB 1.5s 0s infinite;
+          animation: loadingB 1.5s 0s infinite;
+}
+
+.load-wrapp .load-3 .line:nth-last-child(1) {
+  -webkit-animation: loadingC 0.6s 0.1s linear infinite;
+          animation: loadingC 0.6s 0.1s linear infinite;
+}
+
+.load-wrapp .load-3 .line:nth-last-child(2) {
+  -webkit-animation: loadingC 0.6s 0.2s linear infinite;
+          animation: loadingC 0.6s 0.2s linear infinite;
+}
+
+.load-wrapp .load-3 .line:nth-last-child(3) {
+  -webkit-animation: loadingC 0.6s 0.3s linear infinite;
+          animation: loadingC 0.6s 0.3s linear infinite;
+}
+
+.load-wrapp .load-4 .ring-1 {
+  -webkit-animation: loadingD 1.5s 0.3s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
+          animation: loadingD 1.5s 0.3s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
+}
+
+.load-wrapp .load-5 .ball-holder {
+  -webkit-animation: loadingE 1.3s linear infinite;
+          animation: loadingE 1.3s linear infinite;
+}
+
+.load-wrapp .load-6 .letter {
+  -webkit-animation-name: loadingF;
+          animation-name: loadingF;
+  -webkit-animation-duration: 1.6s;
+          animation-duration: 1.6s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-direction: linear;
+          animation-direction: linear;
+}
+
+.load-wrapp .l-1 {
+  -webkit-animation-delay: 0.48s;
+          animation-delay: 0.48s;
+}
+
+.load-wrapp .l-2 {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+
+.load-wrapp .l-3 {
+  -webkit-animation-delay: 0.72s;
+          animation-delay: 0.72s;
+}
+
+.load-wrapp .l-4 {
+  -webkit-animation-delay: 0.84s;
+          animation-delay: 0.84s;
+}
+
+.load-wrapp .l-5 {
+  -webkit-animation-delay: 0.96s;
+          animation-delay: 0.96s;
+}
+
+.load-wrapp .l-6 {
+  -webkit-animation-delay: 1.08s;
+          animation-delay: 1.08s;
+}
+
+.load-wrapp .l-7 {
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
+}
+
+.load-wrapp .l-8 {
+  -webkit-animation-delay: 1.32s;
+          animation-delay: 1.32s;
+}
+
+.load-wrapp .l-9 {
+  -webkit-animation-delay: 1.44s;
+          animation-delay: 1.44s;
+}
+
+.load-wrapp .l-10 {
+  -webkit-animation-delay: 1.56s;
+          animation-delay: 1.56s;
+}
+
+.load-wrapp .load-7 .square {
+  -webkit-animation: loadingG 1.5s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
+          animation: loadingG 1.5s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
+}
+
+.load-wrapp .load-8 .line {
+  -webkit-animation: loadingH 1.5s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
+          animation: loadingH 1.5s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
+}
+
+.load-wrapp .load-9 .spinner {
+  -webkit-animation: loadingI 2s linear infinite;
+          animation: loadingI 2s linear infinite;
+}
+
+.load-wrapp .load-9 .bubble-1,
+.load-wrapp .load-9 .bubble-2 {
+  -webkit-animation: bounce 2s ease-in-out infinite;
+          animation: bounce 2s ease-in-out infinite;
+}
+
+.load-wrapp .load-9 .bubble-2 {
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s;
+}
+
+.load-wrapp .load-10 .bar {
+  -webkit-animation: loadingJ 2s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
+          animation: loadingJ 2s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
+}
+
+@-webkit-keyframes loadingA {
+  0 {
+    height: 15px;
+  }
+  50% {
+    height: 35px;
+  }
+  100% {
+    height: 15px;
+  }
+}
+
+@keyframes loadingA {
+  0 {
+    height: 15px;
+  }
+  50% {
+    height: 35px;
+  }
+  100% {
+    height: 15px;
+  }
+}
+
+@-webkit-keyframes loadingB {
+  0 {
+    width: 15px;
+  }
+  50% {
+    width: 35px;
+  }
+  100% {
+    width: 15px;
+  }
+}
+
+@keyframes loadingB {
+  0 {
+    width: 15px;
+  }
+  50% {
+    width: 35px;
+  }
+  100% {
+    width: 15px;
+  }
+}
+
+@-webkit-keyframes loadingC {
+  0 {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(0, 15px);
+            transform: translate(0, 15px);
+  }
+  100% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+}
+
+@keyframes loadingC {
+  0 {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(0, 15px);
+            transform: translate(0, 15px);
+  }
+  100% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+}
+
+@-webkit-keyframes loadingD {
+  0 {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes loadingD {
+  0 {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes loadingE {
+  0 {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes loadingE {
+  0 {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes loadingF {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes loadingF {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes loadingG {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
+  50% {
+    -webkit-transform: translate(70px, 0) rotate(360deg);
+            transform: translate(70px, 0) rotate(360deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
+}
+
+@keyframes loadingG {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
+  50% {
+    -webkit-transform: translate(70px, 0) rotate(360deg);
+            transform: translate(70px, 0) rotate(360deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+            transform: translate(0, 0) rotate(0deg);
+  }
+}
+
+@-webkit-keyframes loadingH {
+  0% {
+    width: 15px;
+  }
+  50% {
+    width: 35px;
+    padding: 4px;
+  }
+  100% {
+    width: 15px;
+  }
+}
+
+@keyframes loadingH {
+  0% {
+    width: 15px;
+  }
+  50% {
+    width: 35px;
+    padding: 4px;
+  }
+  100% {
+    width: 15px;
+  }
+}
+
+@-webkit-keyframes loadingI {
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes loadingI {
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes bounce {
+  0%,
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@-webkit-keyframes loadingJ {
+  0%,
+  100% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(80px, 0);
+            transform: translate(80px, 0);
+    background-color: #f5634a;
+    width: 25px;
+  }
+}
+
+@keyframes loadingJ {
+  0%,
+  100% {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
+  50% {
+    -webkit-transform: translate(80px, 0);
+            transform: translate(80px, 0);
+    background-color: #f5634a;
+    width: 25px;
+  }
+}
 /*# sourceMappingURL=about.css.map */
