--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -3,8 +3,16 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static '/scss/store/about.css' %}" type="text/css">
+<script rel="stylesheet" src="{% static '/js/about.js' %}" type="text/javascript"></script>
 
 
+<div class="load-wrapp" id="aboutLoader">
+   <div class="load-2">
+     <div class="line"></div>
+     <div class="line"></div>
+     <div class="line"></div>
+   </div>
+ </div>
 
 <div class="cover">
    <div class="cover-desktop">
