--- a/apps/order/templates/core/success.html
+++ b/apps/order/templates/core/success.html
@@ -5,12 +5,23 @@
 <link rel="stylesheet" href="{% static '/scss/store/success.css' %}" type="text/css">
 
 <div class="cover">
-    <div class="cover-text">
-       <img src="{% static '/images/covers/cover-3.png' %}" alt="cover-img">
-       <h1>Takk for din bestilling!</h1>
-       <p id="coverText2">Vi har motat bestillingen din, og designerne våres skal starte å lage designen. Under finner du viktig informasjon</p>
+    <div class="cover-mobile">
+      <div class="cover-text">
+         <img src="{% static '/images/covers/cover-2.png' %}" alt="cover-img">
+         <h1>Takk for din bestilling!</h1>
+         <p id="coverText2">Vi har motat bestillingen din, og designerne våres skal starte å lage designen. Under finner du viktig informasjon</p>
     </div>
- </div>
+    </div>
+    <div class="cover-desktop">
+      <div class="cover-text">
+         <img src="{% static '/images/covers/cover-2.png' %}" alt="cover-img">
+         <h1>Takk for din bestilling!</h1>
+         <p id="coverText2">Vi har motat bestillingen din, og designerne våres skal starte å lage designen. Under finner du viktig informasjon</p>
+    </div>
+    </div>
+</div>
+
+
 <div class="order-success">
     <h1>Viktig informasjon</h1>
     <div class="info">
