--- a/static/scss/store/success.scss
+++ b/static/scss/store/success.scss
@@ -1,13 +1,14 @@
 // STANDARD PHONE
-.cover{
-    margin-top: -160px;
-    .cover-text{
+// STANDARD PHONE
+.cover-mobile{ 
+  height: 55vh;
+  .cover-text{
       img{
-        top: 155px;
-        width: 75%;
+          top: 120px;
       }
-    }
   }
+}
+
 .order-success{
     width: 100%;
     height: auto;
