--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -25,15 +25,13 @@ html, body {
           transform: translateY(0);
 }
 
-.services h1 {
-  font-size: 26px;
-  color: #0f0f0f;
-  margin-top: 32px;
-  margin-bottom: 40px;
-}
-
 .services h1.heading {
-  font-family: 'Arima Madurai', cursive;
+  width: 100%;
+  text-transform: uppercase;
+  font-family: 'Sniglet', cursive;
+  color: #142c78;
+  font-weight: 700;
+  font-size: 26px;
 }
 
 .services h1#servicesFirstText {
@@ -67,36 +65,44 @@ html, body {
   margin: 30px;
   margin-bottom: -15px;
   padding: 20px;
-  color: whitesmoke;
+  color: black;
   font-size: 50px;
-  background: #7890dc;
-  border-radius: 25px;
+  border-radius: 8px;
+  color: #3c54a0;
+  -webkit-box-shadow: 2px 2px 2px #3c54a0;
+          box-shadow: 2px 2px 2px #3c54a0;
 }
 
 .services .icon h1 {
+  font-family: 'Sniglet', cursive;
   font-size: 16px;
   color: black;
   padding: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
+  margin-top: 25px;
 }
 
 .services .icon p {
   display: none;
+  font-size: 14px;
+  opacity: 0.9;
 }
 
 .services .icon button {
   margin-top: 10px;
-  border-radius: 30px;
-  border: 2px solid transparent;
+  border-radius: 4px;
   color: #1e1e1e;
   width: 100px;
   font-size: 15px;
   padding: 5px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
-  background: #485ab9;
   color: white;
   outline: none;
+  background: linear-gradient(135deg, #3c54a0, #7996f8);
+  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
+          box-shadow: 1.5px 3px 2px #3c54a0;
+  border: 2px solid transparent;
 }
 
 .services .icon button.active {
@@ -130,20 +136,19 @@ html, body {
           transform: translateY(0);
 }
 
-.product-section h1 {
-  font-size: 26px;
-  color: #0f0f0f;
-  margin-bottom: 60px;
-}
-
 .product-section h1.heading {
-  font-family: 'Arima Madurai', cursive;
+  width: 100%;
+  text-transform: uppercase;
+  font-family: 'Sniglet', cursive;
+  color: #142c78;
+  font-weight: 700;
+  font-size: 26px;
 }
 
 .product-section .product-card {
   margin: 30px auto;
   border-radius: 5%;
-  background: #485ab9;
+  background: linear-gradient(135deg, #3c54a0, #7996f8);
   padding: 5px;
   opacity: 0;
   -webkit-transition: all ease-in .5s;
@@ -158,6 +163,7 @@ html, body {
 .product-section .product-card .text .product-name {
   font-size: 22px;
   color: white;
+  margin-bottom: 60px;
 }
 
 .product-section .product-card .text p {
@@ -171,6 +177,7 @@ html, body {
   font-size: 18px;
   opacity: 0.8;
   color: white;
+  margin-bottom: 60px;
 }
 
 .proccess {
@@ -231,15 +238,13 @@ html, body {
           transform: translateY(20px);
 }
 
-.proccess h1 {
-  font-size: 26px;
-  color: #0f0f0f;
-  margin-bottom: 55px;
-  margin-top: 10px;
-}
-
 .proccess h1.heading {
-  font-family: 'Arima Madurai', cursive;
+  width: 100%;
+  text-transform: uppercase;
+  font-family: 'Sniglet', cursive;
+  color: #142c78;
+  font-weight: 700;
+  font-size: 26px;
 }
 
 .proccess .content {
@@ -256,8 +261,10 @@ html, body {
 }
 
 .proccess .content .class-1 h1 {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 10px;
+  font-family: 'Sniglet', cursive;
+  color: #3c54a0;
 }
 
 .proccess .content .class-1 img {
@@ -270,6 +277,8 @@ html, body {
 .proccess .content .class-1 p {
   margin-top: 5px;
   font-size: 15px;
+  font-family: 'Sniglet', cursive;
+  opacity: 0.9;
 }
 
 .proccess .content .class-2 {
@@ -280,8 +289,10 @@ html, body {
 }
 
 .proccess .content .class-2 h1 {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 10px;
+  font-family: 'Sniglet', cursive;
+  color: #3c54a0;
 }
 
 .proccess .content .class-2 img {
@@ -294,6 +305,8 @@ html, body {
 .proccess .content .class-2 p {
   margin-top: 5px;
   font-size: 15px;
+  font-family: 'Sniglet', cursive;
+  opacity: 0.9;
 }
 
 .proccess .content .class-3 {
@@ -304,8 +317,10 @@ html, body {
 }
 
 .proccess .content .class-3 h1 {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 10px;
+  font-family: 'Sniglet', cursive;
+  color: #3c54a0;
 }
 
 .proccess .content .class-3 img {
@@ -318,6 +333,8 @@ html, body {
 .proccess .content .class-3 p {
   margin-top: 5px;
   font-size: 15px;
+  font-family: 'Sniglet', cursive;
+  opacity: 0.9;
 }
 
 .proccess .content .class-4 {
@@ -328,8 +345,10 @@ html, body {
 }
 
 .proccess .content .class-4 h1 {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 10px;
+  font-family: 'Sniglet', cursive;
+  color: #3c54a0;
 }
 
 .proccess .content .class-4 img {
@@ -342,6 +361,8 @@ html, body {
 .proccess .content .class-4 p {
   margin-top: 5px;
   font-size: 15px;
+  font-family: 'Sniglet', cursive;
+  opacity: 0.9;
 }
 
 .proccess .content .class-5 {
@@ -352,8 +373,10 @@ html, body {
 }
 
 .proccess .content .class-5 h1 {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 10px;
+  font-family: 'Sniglet', cursive;
+  color: #3c54a0;
 }
 
 .proccess .content .class-5 img {
@@ -366,6 +389,8 @@ html, body {
 .proccess .content .class-5 p {
   margin-top: 5px;
   font-size: 15px;
+  opacity: 0.9;
+  font-family: 'Sniglet', cursive;
 }
 
 .contact-us {
@@ -381,19 +406,20 @@ html, body {
   opacity: 1;
 }
 
-.contact-us h1 {
+.contact-us h1.heading {
+  width: 100%;
+  text-transform: uppercase;
+  font-family: 'Sniglet', cursive;
+  color: #142c78;
+  font-weight: 700;
   font-size: 26px;
-  color: #0f0f0f;
-  margin-top: 32px;
-  margin-bottom: 5px;
-  font-family: 'Arima Madurai', cursive;
 }
 
 .contact-us p {
   font-size: 18px;
-  color: #0f0f0f;
-  margin-bottom: 0px;
-  font-family: 'Arima Madurai', cursive;
+  text-transform: uppercase;
+  font-family: 'Sniglet', cursive;
+  color: #3c54a0;
 }
 
 .contact-us form {
@@ -404,21 +430,73 @@ html, body {
   opacity: 0;
   -webkit-transition: all ease-in .5s;
   transition: all ease-in .5s;
+  position: relative;
+}
+
+.contact-us form .form-tag-navn {
+  font-size: 14px;
+  color: #3c54a0;
+  background: white;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0 2px;
+  position: absolute;
+  left: 20px;
+  top: 25px;
+}
+
+.contact-us form .form-tag-email {
+  font-size: 14px;
+  color: #3c54a0;
+  background: white;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0 2px;
+  position: absolute;
+  left: 20px;
+  top: 90px;
+}
+
+.contact-us form .form-tag-message {
+  font-size: 14px;
+  color: #3c54a0;
+  background: white;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0 2px;
+  position: absolute;
+  left: 20px;
+  top: 152px;
 }
 
 .contact-us form textarea {
   width: 100%;
-  border: 1px solid #787878;
-  border-radius: 3px;
+  border: 2px solid #3c54a0;
+  border-radius: 4px;
   padding: 3px;
+  padding-top: 5px;
   height: 100px;
+  outline: none;
+  font-size: 15px;
+}
+
+.contact-us form input:-webkit-autofill,
+.contact-us form input:-webkit-autofill:hover,
+.contact-us form input:-webkit-autofill:focus,
+.contact-us form input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
 
 .contact-us form input {
   width: 100%;
-  border: 1px solid #787878;
-  border-radius: 3px;
-  padding: 3px;
+  border: 2px solid #3c54a0;
+  border-radius: 4px;
+  padding: 7px;
+  outline: none;
+  font-size: 15px;
 }
 
 .contact-us form .form-actions {
@@ -426,18 +504,18 @@ html, body {
 }
 
 .contact-us form .form-actions button {
-  border-radius: 30px;
-  border: 2px solid transparent;
-  color: #1e1e1e;
-  background: #485ab9;
+  border-radius: 4px;
   width: 200px;
   font-size: 16px;
   padding: 5px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
-  background: 245;
   color: white;
   outline: none;
+  background: linear-gradient(135deg, #3c54a0, #7996f8);
+  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
+          box-shadow: 1.5px 3px 2px #3c54a0;
+  border: 2px solid transparent;
 }
 
 .contact-us form .form-actions button:hover {
@@ -995,71 +1073,15 @@ html, body {
 }
 
 @media only screen and (min-device-width: 1024px) {
+  h1.heading {
+    font-size: 34px;
+  }
   .product-section .product-card {
     width: 100%;
   }
   .contact-us form {
-    margin: 15px 85px;
-  }
-  .proccess {
-    background: white;
-    width: 100%;
-    height: auto;
-    padding: 30px;
-    text-align: center;
-    position: relative;
-  }
-  .proccess.active .content .class-1 {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    -webkit-transition: all ease-in .2s;
-    transition: all ease-in .2s;
-  }
-  .proccess.active .content .class-2 {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    -webkit-transition: all ease-in .6s;
-    transition: all ease-in .6s;
-  }
-  .proccess.active .content .class-3 {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    -webkit-transition: all ease-in .8s;
-    transition: all ease-in .8s;
-  }
-  .proccess.active .content .class-4 {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    -webkit-transition: all ease-in 1s;
-    transition: all ease-in 1s;
-  }
-  .proccess.active .content .class-5 {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    -webkit-transition: all ease-in 1.2s;
-    transition: all ease-in 1.2s;
-  }
-  .proccess .border {
-    background: #646464;
-    height: 2px;
+    margin: 15px auto;
     width: 65%;
-    margin: 20px auto;
-    -webkit-transform: translateY(20px);
-            transform: translateY(20px);
-  }
-  .proccess h1 {
-    font-size: 26px;
-    color: #0f0f0f;
-    margin-bottom: 55px;
-    margin-top: 10px;
-  }
-  .proccess h1.heading {
-    font-family: 'Arima Madurai', cursive;
   }
   .proccess .content {
     width: 100%;
