--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -10,7 +10,6 @@ html, body {
     scroll-behavior: smooth;
 }
 // STANDARD PHONE
-
 #navBarSpace{
   display: none;
 }
@@ -30,12 +29,13 @@ html, body {
     }
   }
   h1{
-    font-size: 26px;
-    color: rgb(15, 15, 15);
-    margin-top: 32px;
-    margin-bottom: 40px;
     &.heading{
-      font-family: 'Arima Madurai', cursive;
+      width: 100%;
+      text-transform: uppercase;
+      font-family: 'Sniglet', cursive;
+      color: rgb(20, 44, 120);
+      font-weight: 700;
+      font-size: 26px;
     }
      &#servicesFirstText{
       font-weight: unset;
@@ -62,32 +62,38 @@ html, body {
       margin: 30px;
       margin-bottom: -15px;
       padding: 20px;
-      color: rgb(245, 245, 245);
+      color: black;
       font-size: 50px;
-      background: rgb(120, 144, 220);
-      border-radius: 25px;
+      border-radius: 8px;
+      color: rgb(60, 84, 160);
+      box-shadow: 2px 2px 2px rgb(60, 84, 160);
     }
     h1{
+      font-family: 'Sniglet', cursive;
       font-size: 16px;
       color: black;
       padding: 5px;
-      margin-bottom: 10px;
+      margin-bottom: 7px;
+      margin-top: 25px;
     }
     p{
       display: none;
+      font-size: 14px;
+      opacity: 0.9;
     }
     button{
       margin-top: 10px;
-      border-radius: 30px;
-      border: 2px solid transparent;
+      border-radius: 4px;
       color: rgb(30, 30, 30);
       width: 100px;
       font-size: 15px;
       padding: 5px;
       transition: all .2s ease-in-out;
-      background: rgb(72, 90, 185);
       color: white;
       outline: none;
+      background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
+      box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
+      border: 2px solid transparent;
       &.active{
         background: white;
         color: black;
@@ -118,17 +124,19 @@ html, body {
     }
   }
   h1{
-    font-size: 26px;
-    color: rgb(15, 15, 15);
-    margin-bottom: 60px;
     &.heading{
-      font-family: 'Arima Madurai', cursive;
+      width: 100%;
+      text-transform: uppercase;
+      font-family: 'Sniglet', cursive;
+      color: rgb(20, 44, 120);
+      font-weight: 700;
+      font-size: 26px;
     }
   }
   .product-card{
     margin: 30px auto;
     border-radius: 5%;
-    background: rgb(72, 90, 185);
+    background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
     padding: 5px;
     opacity: 0;
     transition: all ease-in .5s;
@@ -139,6 +147,7 @@ html, body {
       .product-name{
         font-size: 22px;
         color: white;
+        margin-bottom: 60px;
       }
       p{
         color: white;
@@ -149,6 +158,7 @@ html, body {
         font-size: 18px;
         opacity: 0.8;
         color: white;
+        margin-bottom: 60px;
       }
     }
   }
@@ -197,12 +207,13 @@ html, body {
     transform: translateY(20px);
   }
   h1{
-    font-size: 26px;
-    color: rgb(15, 15, 15);
-    margin-bottom: 55px;
-    margin-top: 10px;
     &.heading{
-      font-family: 'Arima Madurai', cursive;
+      width: 100%;
+      text-transform: uppercase;
+      font-family: 'Sniglet', cursive;
+      color: rgb(20, 44, 120);
+      font-weight: 700;
+      font-size: 26px;
     }
   }
   .content{
@@ -214,8 +225,10 @@ html, body {
       margin: 35px auto;
       transform: translateY(40px);
       h1{
-        font-size: 18px;
+        font-size: 20px;
         margin-bottom: 10px;
+        font-family: 'Sniglet', cursive;
+        color: rgb(60, 84, 160);
       }
       img{
         width: 250px;
@@ -226,6 +239,8 @@ html, body {
       p{
         margin-top: 5px;
         font-size: 15px;
+        font-family: 'Sniglet', cursive;
+        opacity: 0.9;
       }
     }
     .class-2{
@@ -233,8 +248,10 @@ html, body {
       margin: 35px auto;
       transform: translateY(40px);
       h1{
-        font-size: 18px;
+        font-size: 20px;
         margin-bottom: 10px;
+        font-family: 'Sniglet', cursive;
+        color: rgb(60, 84, 160);
       }
       img{
         width: 250px;
@@ -245,6 +262,8 @@ html, body {
       p{
         margin-top: 5px;
         font-size: 15px;
+        font-family: 'Sniglet', cursive;
+        opacity: 0.9;
       }
     }
     .class-3{
@@ -252,8 +271,10 @@ html, body {
       margin: 35px auto;
       transform: translateY(40px);
       h1{
-        font-size: 18px;
+        font-size: 20px;
         margin-bottom: 10px;
+        font-family: 'Sniglet', cursive;
+        color: rgb(60, 84, 160);
       }
       img{
         width: 250px;
@@ -264,6 +285,8 @@ html, body {
       p{
         margin-top: 5px;
         font-size: 15px;
+        font-family: 'Sniglet', cursive;
+        opacity: 0.9;
       }
     }
     .class-4{
@@ -271,8 +294,10 @@ html, body {
       margin: 35px auto;
       transform: translateY(40px);
       h1{
-        font-size: 18px;
+        font-size: 20px;
         margin-bottom: 10px;
+        font-family: 'Sniglet', cursive;
+        color: rgb(60, 84, 160);
       }
       img{
         width: 250px;
@@ -283,6 +308,8 @@ html, body {
       p{
         margin-top: 5px;
         font-size: 15px;
+        font-family: 'Sniglet', cursive;
+        opacity: 0.9;
       }
     }
     .class-5{
@@ -290,8 +317,10 @@ html, body {
       margin: 35px auto;
       transform: translateY(40px);
       h1{
-        font-size: 18px;
+        font-size: 20px;
         margin-bottom: 10px;
+        font-family: 'Sniglet', cursive;
+        color: rgb(60, 84, 160);
       }
       img{
         width: 250px;
@@ -302,6 +331,8 @@ html, body {
       p{
         margin-top: 5px;
         font-size: 15px;
+        opacity: 0.9;
+        font-family: 'Sniglet', cursive;
       }
     }
   }
@@ -319,17 +350,20 @@ html, body {
     }
   }
   h1{
-    font-size: 26px;
-    color: rgb(15, 15, 15);
-    margin-top: 32px;
-    margin-bottom: 5px;
-    font-family: 'Arima Madurai', cursive;
+    &.heading{
+      width: 100%;
+      text-transform: uppercase;
+      font-family: 'Sniglet', cursive;
+      color: rgb(20, 44, 120);
+      font-weight: 700;
+      font-size: 26px;
+    }
   }
   p{
     font-size: 18px;
-    color: rgb(15, 15, 15);
-    margin-bottom: 0px;
-    font-family: 'Arima Madurai', cursive;
+    text-transform: uppercase;
+    font-family: 'Sniglet', cursive;
+    color: rgb(60, 84, 160);
   }
   form{
     text-align: left;
@@ -338,33 +372,75 @@ html, body {
     margin-top: 0;
     opacity: 0;
     transition: all ease-in .5s;
-    textarea{
-      width: 100%;
-      border: 1px solid rgb(120, 120, 120);
-      border-radius: 3px;
-      padding: 3px;
-      height: 100px;
+    position: relative;
+    .form-tag-navn{
+      font-size: 14px;
+      color: rgb(60, 84, 160);
+      background: white;
+      width: max-content;
+      padding: 0 2px;
+      position: absolute;
+      left: 20px;
+      top: 25px;
+    }
+    .form-tag-email{
+      font-size: 14px;
+      color: rgb(60, 84, 160);
+      background: white;
+      width: max-content;
+      padding: 0 2px;
+      position: absolute;
+      left: 20px;
+      top: 90px;
+    }
+    .form-tag-message{
+      font-size: 14px;
+      color: rgb(60, 84, 160);
+      background: white;
+      width: max-content;
+      padding: 0 2px;
+      position: absolute;
+      left: 20px;
+      top: 152px;
+    }
+      textarea{
+        width: 100%;
+        border: 2px solid rgb(60, 84, 160);
+        border-radius: 4px;
+        padding: 3px;
+        padding-top: 5px;
+        height: 100px;
+        outline: none;
+        font-size: 15px;
+    }
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover, 
+    input:-webkit-autofill:focus, 
+    input:-webkit-autofill:active
+    {
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
     }
     input{
       width: 100%;
-      border: 1px solid rgb(120, 120, 120);
-      border-radius: 3px;
-      padding: 3px;
+      border: 2px solid rgb(60, 84, 160);
+      border-radius: 4px;
+      padding: 7px;
+      outline: none;
+      font-size: 15px;      
     }
     .form-actions{
       margin-top: 15px;
       button{
-        border-radius: 30px;
-        border: 2px solid transparent;
-        color: rgb(30, 30, 30);
-        background: rgb(72, 90, 185);
+        border-radius: 4px;
         width: 200px;
         font-size: 16px;
         padding: 5px;
         transition: all .2s ease-in-out;
-        background: 245;
         color: white;
         outline: none;
+        background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
+        box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
+        border: 2px solid transparent;  
         &:hover{
           background: white;
           color: black;
@@ -716,6 +792,11 @@ html, body {
 }
 // NORMAL DESKTOP
 @media only screen and (min-device-width:1024px) { 
+  h1{
+    &.heading{
+      font-size: 34px;
+    }
+  }
   .product-section{
     .product-card{
       width: 100%;
@@ -723,61 +804,11 @@ html, body {
   }
   .contact-us{
     form{
-      margin: 15px 85px;
+      margin: 15px auto;
+      width: 65%;
     }
   }
   .proccess{
-    background: white;
-    width: 100%;
-    height: auto;
-    padding: 30px;
-    text-align: center;
-    position: relative;
-    &.active{
-      .content{
-        .class-1{
-          opacity: 1;
-          transform: translateY(0);
-          transition: all ease-in .2s;
-        }
-        .class-2{
-          opacity: 1;
-          transform: translateY(0);
-          transition: all ease-in .6s;
-        }
-        .class-3{
-          opacity: 1;
-          transform: translateY(0);
-        transition: all ease-in .8s;
-      }
-      .class-4{
-        opacity: 1;
-        transform: translateY(0);
-        transition: all ease-in 1s;
-      }
-      .class-5{
-        opacity: 1;
-        transform: translateY(0);
-        transition: all ease-in 1.2s;
-      }
-    }
-  }
-    .border{
-      background: rgb(100, 100, 100);
-      height: 2px;
-      width: 65%;
-      margin: 20px auto;
-      transform: translateY(20px);
-    }
-    h1{
-      font-size: 26px;
-      color: rgb(15, 15, 15);
-      margin-bottom: 55px;
-      margin-top: 10px;
-      &.heading{
-        font-family: 'Arima Madurai', cursive;
-      }
-    }
     .content{
       width: 100%;
       height: auto;
