--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -25,7 +25,7 @@
 .cover-mobile {
   position: relative;
   width: 100%;
-  height: 65vh;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -35,45 +35,66 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: #7890dc;
+  background: white;
+}
+
+.cover-mobile .img {
+  -webkit-transform: translatey(180px);
+          transform: translatey(180px);
+  position: absolute;
+  background: white;
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0 1px 10px #3c54a0;
+          box-shadow: 0 1px 10px #3c54a0;
+}
+
+.cover-mobile .img img {
+  max-width: 320px;
 }
 
 .cover-mobile .cover-text {
   width: 100%;
-  -webkit-transform: translateY(-70px) translateX(0);
-          transform: translateY(-70px) translateX(0);
-  position: relative;
+  height: 100%;
+  -webkit-transform: translateY(120px) translateX(0);
+          transform: translateY(120px) translateX(0);
   text-align: left;
   margin: 5px;
   margin-top: 0;
-}
-
-.cover-mobile .cover-text img {
-  position: absolute;
-  left: 0;
-  top: 180px;
-  max-width: 320px;
-  background: -webkit-gradient(linear, left top, right top, from(#6e86c8), color-stop(70%, transparent));
-  background: linear-gradient(to right, #6e86c8, transparent 70%);
-  border-radius: 75px;
-  border-bottom-right-radius: 125px;
-  border-top-right-radius: 125px;
 }
 
 .cover-mobile .cover-text h1 {
   -webkit-transform: translateY(-10);
           transform: translateY(-10);
   width: 100%;
-  font-size: 22px;
-  color: #fafafa;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 26px;
+  text-transform: uppercase;
+  font-family: 'Sniglet', cursive;
+  color: #3c54a0;
+  font-weight: 500;
+}
+
+.cover-mobile .cover-text h1 span {
+  font-weight: 700;
+  font-size: 30px;
+  color: #142c78;
 }
 
 .cover-mobile .cover-text p {
-  -webkit-transition: ease-in 1s;
-  transition: ease-in 1s;
-  color: #fafafa;
+  color: #0a0a0a;
   font-size: 14px;
+  font-family: 'Sniglet', cursive;
+  margin: 10px 0;
+  opacity: 0.7;
 }
 
 .cover-mobile .cover-buttons {
@@ -85,6 +106,7 @@
 }
 
 .cover-mobile .cover-buttons a {
+  cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -98,29 +120,19 @@
   text-align: center;
   margin-top: 10px;
   margin-right: 15px;
-  border-radius: 30px;
+  border-radius: 4px;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  font-size: 14px;
-  padding: 10px;
+  font-size: 15px;
+  padding: 8px 13px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
   outline: none;
-  text-transform: uppercase;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 600;
-  letter-spacing: 0.5px;
-  background: transparent;
-  -webkit-box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
-          box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
-  border: 2px solid white;
-  -webkit-backdrop-filter: blur(20px);
-          backdrop-filter: blur(20px);
-}
-
-.cover-mobile .cover-buttons a:nth-child(1) {
-  background: #3c54a0;
+  background: linear-gradient(135deg, #3c54a0, #7996f8);
+  -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
+          box-shadow: 1.5px 3px 2px #3c54a0;
+  border: 2px solid transparent;
 }
 
 @media only screen and (min-device-width: 1024px) {
@@ -142,24 +154,25 @@
             align-items: center;
     background: #7890dc;
   }
+  .cover-desktop .img {
+    background: -webkit-gradient(linear, left top, right top, from(#647cbe), color-stop(70%, transparent));
+    background: linear-gradient(to right, #647cbe, transparent 70%);
+    width: 100%;
+    height: 100%;
+    margin-top: 120px;
+  }
   .cover-desktop .cover-text {
     width: 100%;
-    -webkit-transform: translateY(0) translateX(10px);
-            transform: translateY(0) translateX(10px);
+    -webkit-transform: translateY(0) translateX(20px);
+            transform: translateY(0) translateX(20px);
     position: relative;
-    text-align: center;
-    margin: 5px;
+    text-align: left;
+    margin: 15px;
     margin-top: 0;
-  }
-  .cover-desktop .cover-text img {
-    position: absolute;
-    left: 0;
-    top: 180px;
-    max-width: 350px;
   }
   .cover-desktop .cover-text h1 {
     width: 100%;
-    font-size: 22px;
+    font-size: 26px;
     color: #fafafa;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
@@ -167,7 +180,7 @@
     -webkit-transition: ease-in 1s;
     transition: ease-in 1s;
     color: #fafafa;
-    font-size: 14px;
+    font-size: 18px;
   }
   .cover-desktop .cover-buttons {
     text-align: center;
@@ -177,14 +190,15 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   .cover-desktop .cover-buttons a {
+    cursor: pointer;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
