--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -22,39 +22,52 @@
 .cover-mobile{ 
   position: relative;
   width: 100%;
-  height: 65vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgb(120, 144, 220);
+  background: white;
+  .img{
+    transform: translatey(180px);
+    position: absolute;
+    background: white;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 1px 10px rgb(60, 84, 160);
+    img{
+      max-width: 320px;
+    }
+  }
   .cover-text{
     width: 100%;
-    transform: translateY(-70px) translateX(0);
-    position: relative;
+    height: 100%;
+    transform: translateY(120px) translateX(0);
     text-align: left;
     margin: 5px;
     margin-top: 0;
-    img{
-      position: absolute;
-      left: 0;
-      top: 180px;
-      max-width: 320px;
-      background: linear-gradient(to right, rgb(110, 134, 200), transparent 70%);
-      border-radius: 75px;
-      border-bottom-right-radius: 125px;
-      border-top-right-radius: 125px;
-    }
     h1{
       transform: translateY(-10);
       width: 100%;
-      font-size: 22px;
-      color: rgb(250, 250, 250);
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-size: 26px;
+      text-transform: uppercase;
+      font-family: 'Sniglet', cursive;
+      color: rgb(60, 84, 160);
+      font-weight: 500;
+      span{
+        font-weight: 700;
+        font-size: 30px;
+        color: rgb(20, 44, 120);
+      }
     }
     p{
-      transition: ease-in 1s;
-      color: rgb(250, 250, 250);
+      color: rgb(10, 10, 10);
       font-size: 14px;
+      font-family: 'Sniglet', cursive;
+      margin: 10px 0;
+      opacity: 0.7;
     }
   }
   .cover-buttons{
@@ -62,6 +75,7 @@
     width: 100%;
     display: flex;
     a{
+      cursor: pointer;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -69,23 +83,15 @@
       text-align: center;
       margin-top: 10px;
       margin-right: 15px;
-      border-radius: 30px;
+      border-radius: 4px;
       width: max-content;
-      font-size: 14px;
-      padding: 10px;
+      font-size: 15px;
+      padding: 8px 13px;
       transition: all .2s ease-in-out;
       outline: none;
-      text-transform: uppercase;
-      font-family: 'Oswald', sans-serif;
-      font-weight: 600;
-      letter-spacing: 0.5px;
-      background: transparent;
-      box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
-      border: 2px solid white;
-      backdrop-filter: blur(20px);
-      &:nth-child(1){
-        background: rgb(60, 84, 160);
-      }
+      background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
+      box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
+      border: 2px solid transparent;
     }
   }
 }
@@ -103,29 +109,29 @@
   justify-content: center;
   align-items: center;
   background: rgb(120, 144, 220);
+  .img{
+    background: linear-gradient(to right, rgb(100, 124, 190), transparent 70%);
+    width: 100%;
+    height: 100%;
+    margin-top: 120px;
+  }
   .cover-text{
     width: 100%;
-    transform: translateY(0) translateX(10px);
+    transform: translateY(0) translateX(20px);
     position: relative;
-    text-align: center;
-    margin: 5px;
+    text-align: left;
+    margin: 15px;
     margin-top: 0;
-    img{
-      position: absolute;
-      left: 0;
-      top: 180px;
-      max-width: 350px;
-    }
     h1{
       width: 100%;
-      font-size: 22px;
+      font-size: 26px;
       color: rgb(250, 250, 250);
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
     p{
       transition: ease-in 1s;
       color: rgb(250, 250, 250);
-      font-size: 14px;
+      font-size: 18px;
     }
   }
   .cover-buttons{
@@ -133,9 +139,10 @@
     transform: translateY(30px);
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     a{
+      cursor: pointer;
       display: flex;
       justify-content: center;
       align-items: center;
