--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -12,20 +12,23 @@
             width: 50%;
             text-align: center;
             h1{
-                font-size: 30px;
-                font-weight: bold;
-                margin: 5px;
+                text-transform: uppercase;
+                font-family: 'Sniglet', cursive;
+                color: rgb(20, 44, 120);
+                font-weight: 700;
+                font-size: 26px;
             }
             .footer-li{
                 list-style: none;
                 a{
+                    font-family: 'Sniglet', cursive;
                     display: inline-block;
                     width: 50%;
                     text-decoration: none;
-                    color: black;
+                    color: rgb(60, 84, 160);
                     font-size: 14px;
                     padding: 5px;
-                    opacity: 0.5;
+                    opacity: 0.7;
                     transition: .3s;
                     &:hover{
                         opacity: 1;
