--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -19,8 +19,8 @@
 
 #navbar.sticky {
   background: white;
-  -webkit-box-shadow: 0px 2px 5px rgba(70, 70, 70, 0.7);
-          box-shadow: 0px 2px 5px rgba(70, 70, 70, 0.7);
+  -webkit-box-shadow: 0px 3px 5px #142c78;
+          box-shadow: 0px 3px 5px #142c78;
   border-color: transparent;
 }
 
@@ -30,14 +30,6 @@
 
 #navbar.sticky .my-account-icon i {
   color: black;
-}
-
-#navbar.sticky .logo h1 {
-  color: black;
-}
-
-#navbar.sticky .order {
-  background: #3e50af;
 }
 
 #navbar.menu-active {
@@ -50,14 +42,6 @@
 
 #navbar.menu-active .my-account-icon i {
   color: black;
-}
-
-#navbar.menu-active .logo h1 {
-  color: black;
-}
-
-#navbar.menu-active .order {
-  background: #3e50af;
 }
 
 #navbar .desktop-menu {
@@ -76,10 +60,15 @@
 
 #navbar .logo h1 {
   font-family: 'Indie Flower', cursive;
-  color: white;
+  color: #3c54a0;
   font-size: 32px;
   height: 100%;
-  width: auto;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
@@ -101,23 +90,22 @@
   display: block;
   width: 20px;
   height: 2px;
-  background: white;
+  background: black;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 
 #navbar .hamburger .upper-span {
   margin-bottom: 7px;
-  width: 18px;
 }
 
 #navbar .hamburger .center-span {
-  width: 15px;
+  -webkit-transform: translateX(-5px);
+          transform: translateX(-5px);
 }
 
 #navbar .hamburger .lower-span {
   margin-top: 7px;
-  width: 16px;
 }
 
 #navbar .hamburger.click {
@@ -174,7 +162,6 @@
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li a {
-  border-radius: 30px;
   border: 2px solid transparent;
   color: #485ab9;
   display: inline-block;
@@ -190,8 +177,11 @@
 
 #navbar .sidebar .sidebar-ul .sidebar-li :nth-child(5) {
   border: 2px solid transparent;
-  background: #485ab9;
+  background: linear-gradient(135deg, #3c54a0, #7996f8);
+  border-radius: 4px;
   color: white;
+  -webkit-box-shadow: 0px 5px 2px #3c54a0;
+          box-shadow: 0px 5px 2px #3c54a0;
 }
 
 #navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(1) {
@@ -243,7 +233,7 @@
 }
 
 #navbar .my-account-icon i {
-  color: white;
+  color: black;
   font-size: 22px;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -342,12 +332,11 @@
   width: max-content;
   text-align: center;
   border-radius: 7px;
-  border: 2px solid white;
   -webkit-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
   font-size: 14px;
-  background: #324a96;
-  color: #d9e2ff;
+  border-radius: 4px;
+  background: linear-gradient(135deg, #3c54a0, #6e8efb);
 }
 
 @media only screen and (min-device-width: 1024px) {
