--- a/static/scss/store/order.scss
+++ b/static/scss/store/order.scss
@@ -64,6 +64,7 @@ $loader: rgb(80, 104, 180);
             transition: all .2s ease-in-out;
             background: 245;
             color: white;
+            outline: none;
             &:hover{
               background: white;
               color: black;
